# tgvtimes

./: .gitignore  CLAUDE.md  INTERNATIONAL_OPERATORS.md  Makefile  README.md  pyproject.toml
src/: main.py
src/api_explo/: __init__.py  data_playground.py
src/api_explo/scripts/: api_analysis.py  check_eurostar.py  inspect_journey_structure.py
src/backend/: __init__.py  sncf_api.py
src/config/: __init__.py  logger.py
src/config/appdata/: stations.json
src/config/appdata/scripts/: manage_stations.py
src/data/: stations.json
src/data/scripts/: api_analysis.py  check_eurostar.py  fetch_station_ids.py  get_station_ids.py  inspect_journey_structure.py  inspect_raw_api_response.py  manage_stations.py  search_international_operators.py
src/frontend/: __init__.py  app.py  utils.py
